<resources>
    <string name="app_name">SELV - Mobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SELV Mobile</string>
    <string name="nav_header_subtitle" translatable="false">test.selv.org.mz</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Definicoes</string>

    <string name="string_facility">US/Deposito</string>
    <string name="string_selv_acronym">SELV</string>
    <string name="string_selv_full">Electronic System for Vaccine Logistics</string>
    <string name="string_server_url">Server URL</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_requisition">Requisicoes</string>
    <string name="menu_stockmanagement">Gestao de Stock</string>
    <string name="menu_shipment">Aviamentos</string>
    <string name="menu_sync">Sincronizacao</string>
    <string name="menu_log_out">Terminar sessão</string>

    <string name="string_log_in">Iniciar sessão</string>

    <string name="string_sync_metadata">Configuracoes e Metadados</string>
    <string name="string_sync_data">Dados de Apliciacao</string>
    <string name="string_sync_delete">Apagar tudo e Sincronizar</string>

    <string name="string_receive">Entradas</string>
    <string name="string_issue">Saidas</string>
    <string name="string_inventory">Inventario</string>
    <string name="string_soh">Stock Disponivel</string>
    <string name="string_adjustments">Ajustes</string>

    <string name="string_ok">Ultima Sincronizacao: </string>

    <string name="string_product">Produto</string>
    <string name="string_program">Programa</string>
    <string name="string_available_soh">Stock disponível</string>
    <string name="string_expiration_date">Data de Validade</string>
    <string name="string_lot">Lote</string>
    <string name="string_source">Origem</string>
    <string name="string_destination">Destino</string>
    <string name="string_quantity">Quantidade</string>
    <string name="string_reason">Motivo</string>
    <string name="string_date">Data</string>
    <string name="string_comments">Comentarios</string>
    <string name="string_vvm">Estagio VVM</string>
    <string name="string_save">Salvar</string>
    <string name="string_cancel">Cancelar</string>
    <string name="string_add">Adicionar</string>
    <string name="string_theoric_stock">Stock Teorico</string>
    <string name="string_delete">Eliminar</string>
    <string name="string_adjusted_total">Total Ajustado</string>
    <string name="string_physicalstock">Stock Fisico</string>
    <string name="string_balance">Balanco</string>
    <string name="string_create">Criar</string>
    <string name="string_signature">Assinatura</string>
    <string name="string_return">Voltar</string>
    <string name="string_proceed">Prosseguir</string>
    <string name="string_status">Estado</string>
    <string name="string_add_reasons">Adicionar Motivos</string>
    <string name="string_submitted">Submissao</string>
    <string name="string_reference_data">Dados de Referencia</string>
    <string name="string_ftaps">Produtos Aprovados por Tipo e Instalaco</string>
    <string name="string_facility_types">Tipos de Instalacoes</string>
    <string name="string_programs">Programas</string>
    <string name="string_orderables">Produtos</string>
    <string name="string_facilities">US / Depositos ou Armazens</string>
    <string name="string_lots">Lotes</string>
    <string name="string_valid_sources">Origens Validas</string>
    <string name="string_valid_reasons">Motivos Validos</string>
    <string name="string_reasons">Motivos</string>
    <string name="string_valid_destinations">Destinos Validos</string>
    <string name="string_total">Total</string>
    <string name="string_last_sync">Ultima Sincronizacao</string>
    <string name="string_update">Actualizar</string>
    <string name="string_sync_all">Actualizar Tudo</string>
    <string-array name="string_array_vvm">
        <item>Estagio 1</item>
        <item>Estagio 2</item>
    </string-array>

    <string name="string_username">Nome de utilizador</string>
    <string name="string_password">Palavra-passe</string>
    <string name="string_login_success">Sessão iniciada!</string>
    <string name="string_login_failed">Sessão não iniciada.</string>
    <string name="string_forgot_password"><a href="https://test.selv.org.mz/#!/forgotPassword">Esqueceu-se da palavra-passe?</a></string>

    <string name="string_preparing">Preparando...</string>
    <string name="string_connecting">Connectando...</string>
    <string name="string_downloading">Baixando</string>
    <string name="string_saving">Guardando</string>
</resources>