<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_requisition"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_requisition" />
        <item
            android:id="@+id/nav_shipment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_shipment" />
        <item
            android:id="@+id/nav_stockmanagement"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_stockmanagement" />

        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_sync" />
    </group>
</menu>