<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"

    android:layout_weight="1"
    android:background="#FFFFFF"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_product"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_lot"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_stock_management_inventory_adjustments_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/tv_stock_management_inventory_adjustments_lot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_stock_management_inventory_adjustments_reason"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:hint="@string/string_reason">

        <AutoCompleteTextView
            android:id="@+id/ac_stock_management_inventory_adjustments_reason"
            android:layout_width="match_parent"
            android:completionThreshold="0"
            android:layout_height="50dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_stock_management_inventory_adjustments_quantity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/string_quantity"
        app:layout_constraintTop_toBottomOf="@id/til_stock_event_dialog_reason_comment">

        <EditText
            android:id="@+id/et_stock_management_inventory_adjustments_quantity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_stock_management_inventory_adjustments_add"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal|center"
        android:text="@string/string_add" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_balance"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_adjusted_total"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_stock_management_inventory_adjustments_balance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/tv_stock_management_inventory_adjustments_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lv_stock_management_inventory_adjustments_list"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

    </ListView>

    <Button
        android:id="@+id/bt_stock_management_inventory_adjustments_save"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal|center"
        android:text="@string/string_save" />

    <Button
        android:id="@+id/bt_stock_management_inventory_adjustments_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal|center"
        android:text="@string/string_cancel" />
</LinearLayout>