<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_stock_event_dialog_product"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/string_product">

            <AutoCompleteTextView
                android:id="@+id/ac_stock_management_inventory_add_product_product"
                android:layout_width="match_parent"
                android:inputType="none"
                android:focusable="false"
                android:layout_height="50dp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_stock_event_dialog_lot"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:hint="@string/string_lot">

        <AutoCompleteTextView
            android:id="@+id/ac_stock_management_inventory_add_product_lot"
            android:layout_width="match_parent"
            android:completionThreshold="0"
            android:layout_height="50dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_stock_event_expiration_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_expiration_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        <TextView
            android:id="@+id/label_stock_management_inventory_new_item_soh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_theoric_stock"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_stock_management_inventory_add_product_expiration_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/tv_stock_management_inventory_add_product_theoric_stock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_stock_event_dialog_quantity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/string_quantity">

        <EditText
            android:id="@+id/et_stock_management_inventory_add_product_quantity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/bt_stock_management_inventory_add_product_add"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal|center"
        android:text="@string/string_save" />

    <Button
        android:id="@+id/bt_stock_event_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal|center"
        android:text="@string/string_cancel" />
</LinearLayout>