<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <ImageView
        android:id="@+id/iv_stock_card_summary_status_row_item"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/baseline_done_all"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_stock_card_summary_row_item_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/string_product"
        app:layout_constraintStart_toEndOf="@id/iv_stock_card_summary_status_row_item"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_stock_card_summary_row_item_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/iv_stock_card_summary_status_row_item"
        app:layout_constraintTop_toBottomOf="@id/label_stock_card_summary_row_item_product" />

    <TextView
        android:id="@+id/label_stock_card_summary_row_item_soh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:text="@string/string_soh"
        app:layout_constraintStart_toEndOf="@id/label_stock_card_summary_row_item_product"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_stock_card_summary_row_item_soh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/label_stock_card_summary_row_item_soh"
        app:layout_constraintTop_toBottomOf="@id/label_stock_card_summary_row_item_soh" />

    <TextView
        android:id="@+id/label_stock_card_summary_lot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/string_lot"
        app:layout_constraintStart_toStartOf="@id/tv_stock_card_summary_row_item_product"
        app:layout_constraintTop_toBottomOf="@id/tv_stock_card_summary_row_item_product" />

    <TextView
        android:id="@+id/label_stock_card_summary_expiration_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_expiration_date"
        app:layout_constraintStart_toStartOf="@id/tv_stock_card_summary_row_item_soh"
        app:layout_constraintTop_toBottomOf="@id/tv_stock_card_summary_row_item_soh" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/string_last_sync"
        app:layout_constraintStart_toEndOf="@id/label_stock_card_summary_expiration_date"
        app:layout_constraintTop_toBottomOf="@id/tv_stock_card_summary_row_item_soh" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>