<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.stockmanagement.StockOnHandFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/label_stock_card_summary_program"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_program"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_stock_card_summary_program"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/label_stock_card_summary_program"
            app:layout_constraintTop_toBottomOf="@id/label_stock_card_summary_program" />

        <TextView
            android:id="@+id/label_stock_card_summary_facility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/string_facility"
            app:layout_constraintStart_toEndOf="@+id/label_stock_card_summary_program"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_stock_card_summary_facility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/label_stock_card_summary_facility"
            app:layout_constraintTop_toBottomOf="@id/label_stock_card_summary_facility"/>

        <ListView
            android:id="@+id/lv_stock_card_summary_stock_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_stock_card_summary_facility"></ListView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_update"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>